Reverting to our traditional CMS garbage collector as we didn't see much difference when trying out G1